[package]
name = "yuki_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
anyhow = "1.0"
thiserror = "2.0"
wait-timeout = "0.2"
chrono = { version = "0.4", features = ["serde"] }
